@@ -3,8 +3,10 @@ $Id$
 2016-03-20  Christian Franke  <franke@computer.org>
 
 	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
-	Add option '-l error[,NUM]' for NVMe devices.
-	smartctl.8.in: Document '-l error[,NUM]' and '-r nvmeioctl'.
+	Add options '-l error[,NUM]' and '-l nvmelog,PAGE,SIZE' for NVMe
+	devices.
+	smartctl.8.in: Document '-l error[,NUM]', '-l nvmelog,PAGE,SIZE'
+	and '-r nvmeioctl'.
 
 2016-03-18  Christian Franke  <franke@computer.org>
 
